--- a/Web/Web.config
+++ b/Web/Web.config
@@ -33,7 +33,7 @@
   <connectionStrings />
   <appSettings>
     <add key="ConStringEncrypt" value="false"/>
-    <add key="ConnectionString" value="server=.;database=NewPro;uid=sa;pwd=zyjm@123456"/>
+    <add key="ConnectionString" value="server=.;database=NewPro;uid=sa;pwd=123456"/>
   </appSettings>
   <system.web>
   
