--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -112,6 +112,7 @@
     <Content Include="Admin\Users\UserEdit.aspx" />
     <Content Include="Admin\Users\UserList.aspx" />
     <Content Include="Admin\Web\WebMsg.aspx" />
+    <Content Include="application.html" />
     <Content Include="bin\FineUIPro.dll" />
     <Content Include="bin\FineUIPro.xml" />
     <Content Include="bin\Maticsoft.BLL.dll" />
@@ -131,11 +132,45 @@
     <Content Include="bin\Newtonsoft.Json.pdb" />
     <Content Include="bin\Newtonsoft.Json.xml" />
     <Content Include="bin\System.Data.SQLite.dll" />
+    <Content Include="business.html" />
     <Content Include="captcha\HHVCode.aspx" />
     <Content Include="common\themes.aspx" />
     <Content Include="Admin\Login.aspx" />
+    <Content Include="control\contract.ascx" />
+    <Content Include="control\footer.ascx" />
+    <Content Include="control\header.ascx" />
+    <Content Include="css\amazeui.min.css" />
+    <Content Include="css\common.css" />
     <Content Include="database\NewPro.sql" />
+    <Content Include="images\application-banner.png" />
+    <Content Include="images\header-bc.png" />
+    <Content Include="images\home-icon_05.png" />
+    <Content Include="images\index-img_10.png" />
+    <Content Include="images\index-img_14.png" />
+    <Content Include="images\index-img_16.png" />
+    <Content Include="images\index-img_21.png" />
+    <Content Include="images\index-img_23.png" />
+    <Content Include="images\i_03.png" />
+    <Content Include="images\join.png" />
+    <Content Include="images\list-icon-active.png" />
+    <Content Include="images\list-icon.png" />
+    <Content Include="images\logo.png" />
+    <Content Include="images\map.png" />
+    <Content Include="images\people_03.png" />
+    <Content Include="images\people_05.png" />
+    <Content Include="images\people_07.png" />
+    <Content Include="images\people_09.png" />
+    <Content Include="images\people_11.png" />
+    <Content Include="images\slider_02.png" />
     <Content Include="index.aspx" />
+    <Content Include="index.html" />
+    <Content Include="information.html" />
+    <Content Include="js\amazeui.min.js" />
+    <Content Include="js\common.js" />
+    <Content Include="js\jquery.min.js" />
+    <Content Include="js\zepto.min.js" />
+    <Content Include="member.html" />
+    <Content Include="other.html" />
     <Content Include="res\css\common.css" />
     <Content Include="res\css\index.css" />
     <Content Include="res\icon\accept.png" />
@@ -2563,6 +2598,27 @@
     </Compile>
     <Compile Include="Admin\Login.aspx.designer.cs">
       <DependentUpon>Login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="control\contract.ascx.cs">
+      <DependentUpon>contract.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="control\contract.ascx.designer.cs">
+      <DependentUpon>contract.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="control\footer.ascx.cs">
+      <DependentUpon>footer.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="control\footer.ascx.designer.cs">
+      <DependentUpon>footer.ascx</DependentUpon>
+    </Compile>
+    <Compile Include="control\header.ascx.cs">
+      <DependentUpon>header.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="control\header.ascx.designer.cs">
+      <DependentUpon>header.ascx</DependentUpon>
     </Compile>
     <Compile Include="index.aspx.cs">
       <DependentUpon>index.aspx</DependentUpon>
