--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -131,6 +131,7 @@
     <Compile Include="tMenu.cs" />
     <Compile Include="tPicture.cs" />
     <Compile Include="tPictureType.cs" />
+    <Compile Include="tReg.cs" />
     <Compile Include="tRole.cs" />
     <Compile Include="tRoleMenu.cs" />
     <Compile Include="tSet.cs" />
