--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -46,7 +46,7 @@
     <FilesToIncludeForPublish>AllFilesInProjectFolder</FilesToIncludeForPublish>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="FineUIPro, Version=5.5.0.0, Culture=neutral, PublicKeyToken=9cbe753c029f291a, processorArchitecture=MSIL">
+    <Reference Include="FineUIPro, Version=5.0.0.0, Culture=neutral, PublicKeyToken=9cbe753c029f291a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>bin\FineUIPro.dll</HintPath>
     </Reference>
@@ -95,6 +95,12 @@
     <Content Include="Admin\Menu\MenuEdit.aspx" />
     <Content Include="Admin\Menu\MenuList.aspx" />
     <Content Include="Admin\Menu\selectMenu.aspx" />
+    <Content Include="Admin\Reg\RegList.aspx" />
+    <Content Include="join.aspx" />
+    <Content Include="member.aspx" />
+    <Content Include="search.aspx" />
+    <Content Include="pagenews_info.aspx" />
+    <Content Include="pagenews.aspx" />
     <Content Include="Admin\Picture\PicturesEdit.aspx" />
     <Content Include="Admin\Picture\PictureList.aspx" />
     <Content Include="Admin\PicType\PicEdit.aspx" />
@@ -112,27 +118,18 @@
     <Content Include="Admin\Users\UserEdit.aspx" />
     <Content Include="Admin\Users\UserList.aspx" />
     <Content Include="Admin\Web\WebMsg.aspx" />
-    <Content Include="application.html" />
     <Content Include="bin\FineUIPro.dll" />
-    <Content Include="bin\FineUIPro.xml" />
     <Content Include="bin\Maticsoft.BLL.dll" />
-    <Content Include="bin\Maticsoft.BLL.pdb" />
     <Content Include="bin\Maticsoft.Common.dll" />
     <Content Include="bin\Maticsoft.DAL.dll" />
-    <Content Include="bin\Maticsoft.DAL.pdb" />
     <Content Include="bin\Maticsoft.DBUtility.dll" />
-    <Content Include="bin\Maticsoft.DBUtility.pdb" />
     <Content Include="bin\Maticsoft.Model.dll" />
-    <Content Include="bin\Maticsoft.Model.pdb" />
     <Content Include="bin\Maticsoft.Web.dll" />
     <Content Include="bin\Maticsoft.Web.pdb" />
     <Content Include="bin\Microsoft.Web.UI.WebControls.dll" />
     <Content Include="bin\MySql.Data.dll" />
     <Content Include="bin\Newtonsoft.Json.dll" />
-    <Content Include="bin\Newtonsoft.Json.pdb" />
-    <Content Include="bin\Newtonsoft.Json.xml" />
     <Content Include="bin\System.Data.SQLite.dll" />
-    <Content Include="business.html" />
     <Content Include="captcha\HHVCode.aspx" />
     <Content Include="common\themes.aspx" />
     <Content Include="Admin\Login.aspx" />
@@ -163,14 +160,10 @@
     <Content Include="images\people_11.png" />
     <Content Include="images\slider_02.png" />
     <Content Include="index.aspx" />
-    <Content Include="index.html" />
-    <Content Include="information.html" />
     <Content Include="js\amazeui.min.js" />
     <Content Include="js\common.js" />
     <Content Include="js\jquery.min.js" />
     <Content Include="js\zepto.min.js" />
-    <Content Include="member.html" />
-    <Content Include="other.html" />
     <Content Include="res\css\common.css" />
     <Content Include="res\css\index.css" />
     <Content Include="res\icon\accept.png" />
@@ -2075,6 +2068,7 @@
     <Content Include="res\themes\pure_orange\theme.css" />
     <Content Include="res\themes\pure_purple\theme.css" />
     <Content Include="res\themes\pure_red\theme.css" />
+    <Content Include="single.aspx" />
     <Content Include="ueditor\dialogs\anchor\anchor.html" />
     <Content Include="ueditor\dialogs\attachment\attachment.css" />
     <Content Include="ueditor\dialogs\attachment\attachment.html" />
@@ -2454,6 +2448,48 @@
     <Compile Include="Admin\Menu\selectMenu.aspx.designer.cs">
       <DependentUpon>selectMenu.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Admin\Reg\RegList.aspx.cs">
+      <DependentUpon>RegList.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\Reg\RegList.aspx.designer.cs">
+      <DependentUpon>RegList.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="join.aspx.cs">
+      <DependentUpon>join.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="join.aspx.designer.cs">
+      <DependentUpon>join.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="member.aspx.cs">
+      <DependentUpon>member.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="member.aspx.designer.cs">
+      <DependentUpon>member.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="search.aspx.cs">
+      <DependentUpon>search.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="search.aspx.designer.cs">
+      <DependentUpon>search.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="pagenews_info.aspx.cs">
+      <DependentUpon>pagenews_info.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="pagenews_info.aspx.designer.cs">
+      <DependentUpon>pagenews_info.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="pagenews.aspx.cs">
+      <DependentUpon>pagenews.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="pagenews.aspx.designer.cs">
+      <DependentUpon>pagenews.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Admin\Picture\PicturesEdit.aspx.cs">
       <DependentUpon>PicturesEdit.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -2628,6 +2664,13 @@
       <DependentUpon>index.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="single.aspx.cs">
+      <DependentUpon>single.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="single.aspx.designer.cs">
+      <DependentUpon>single.aspx</DependentUpon>
+    </Compile>
     <Compile Include="ueditor\net\App_Code\Config.cs" />
     <Compile Include="ueditor\net\App_Code\ConfigHandler.cs" />
     <Compile Include="ueditor\net\App_Code\CrawlerHandler.cs" />
@@ -2664,8 +2707,8 @@
     <Content Include="ueditor\third-party\video-js\font\vjs.ttf" />
     <Content Include="ueditor\third-party\video-js\font\vjs.woff" />
     <None Include="bin\Maticsoft.Web.dll.config" />
-    <None Include="Properties\PublishProfiles\matic.pubxml" />
     <Content Include="res\images\Thumbs.db" />
+    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Web.config">
       <SubType>Designer</SubType>
     </None>
